# CodeReviewAI

./: README.md  docker-compose.yaml  pyproject.toml
app/: main.py
app/api/: routes.py
app/core/: rd.py
app/schemas/: schema.py
app/services/: gpt.py  repo.py
tests/: conftest.py  test_api.py
